8144885: agent/src/os/linux/libproc.h needs to support Linux/SPARC builds

Added include of asm/ptrace.h to libproc.h

Reviewed-by: dsamersoff, asmundak, gthornbr