hotspot/agent/src/os/linux/libproc.h
@@ -69,6 +69,7 @@ combination of ptrace and /proc calls.
 
 
 #if defined(sparc) || defined(sparcv9) || defined(ppc64)
+#include <asm/ptrace.h>
 #define user_regs_struct  pt_regs
 #endif
 #if defined(aarch64)
